2011-01-22 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-window.c:
	* src/nact/nact-window.h
	(nact_window_is_item_writable): Remove unused function.

	* src/nact/base-window.c:
	* src/nact/base-window.h
	(runtime_init_toplevel): Renamed as initialize_base_window().
	(class_init): Fix cclosure_marshall for signals without argument.

	* src/nact/base-window.c:
	* src/nact/base-window.h
	(get_toplevel_name, get_ui_filename): Removed virtual functions.

	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-icon-chooser.c:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences-editor.c: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h:
	Revert commits dfb26ec5, 1991b3b7 and 4d0c43bb due to new virtual method
	handling paradigm.
	Pass the GtkWindow toplevel as a parameter of 'base-window-initialize-gtk'
	signal.
	initial_load_toplevel() virtual method is renamed as initialize_gtk_toplevel().

	* src/nact/nact-main-window.c:
	No more connect to the signal, but implement the virtual method.

	* src/nact/base-application.c (appli_initialize_manage_options):
	* src/nact/base-application.h (manage_options):
	* src/nact/nact-application.c (appli_manage_options):
	Revert commit 3acf600874.

	* src/test/test-virtuals.c: Do some more tests on virtual methods.

	* src/nact/base-window.c (on_initialize_gtk_toplevel_class_handler,
	on_initialize_base_window_class_handler,
	on_all_widgets_showed_class_handler, base_window_is_willing_to_quit):
	Succssively invoke all derived class methods.

	* src/nact/base-window.h (initial_load_toplevel, runtime_init_toplevel,
	all_widgets_showed, is_willing_to_quit): Update comments.

	* src/nact/base-application.c (appli_initialize_manage_options):
	Successively invoke all derived class methods.
